# claw

./: .gitignore  BENCHMARKS.md  BUILD_ERROR_SOLUTIONS.md  BUILD_FIX_EXECUTION_REPORT.md  BUILD_FIX_SUMMARY.md  CLAW_CORE_STREAMLINING_PLAN.md  CONTRIBUTION_GUIDE.md  CONTRIBUTORS.md  DEVELOPMENT_SUMMARY_2026_03_17.md  DISCLAIMERS.md  FAQ.md  GOVERNANCE.md  MIGRATION_GUIDE.md  ONBOARDING.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERFORMANCE_QUICK_START.md  PHASE_4_PLAN.md  README.md  ROUND_13_PERFORMANCE_OPTIMIZATION_SUMMARY.md  ROUND_5_SUMMARY.md  SECURITY_AUDIT_ROUND_14.md  SECURITY_HARDENING_GUIDE.md  TROUBLESHOOTING.md  TROUBLESHOOTING_GUIDE.md  TUTORIAL.md  package.json  tsconfig.json
core/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  ROUND_6_SUMMARY.md  WEEK_1_2_COMPLETION_SUMMARY.md  WEEK_1_2_FINAL_REPORT.md
core/benches/: comprehensive_performance.rs  performance.rs  trigger_latency.rs
core/docs/: API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  API_README.md  ROUND_5_API_COMPLETION_REPORT.md  WEBSOCKET.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  WEBSOCKET_QUICK_START.md
core/examples/: basic_usage.rs  equipment_hot_swap.rs  equipment_hot_swap.rs.bak  social_coordination.rs  social_coordination.rs.bak  websocket_server.rs
core/src/: agent.rs  core.rs  core_optimized.rs  error.rs  lib.rs  messages.rs  monitoring.rs  performance.rs
core/src/api/: auth.rs  cache.rs  handlers.rs  middleware.rs  mod.rs  models.rs  monitoring.rs  optimized_handlers.rs  optimized_websocket.rs  server.rs  social_handlers.rs  webSocket.rs
core/src/equipment/: benches.rs  hierarchical_memory.rs  (+6 more)
core/tests/: api_tests.rs  integration.rs  performance_tests.rs  spreadsheet_integration.rs
(+314 files in other folders)
