[package]
name = "claw-core"
version = "0.1.0"
edition = "2021"
description = "Minimal cellular agent engine for spreadsheet integration"
authors = ["SuperInstance <team@superinstance.dev>"]
license = "MIT"

[[bin]]
name = "claw-server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = "0.21"
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# API Framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "compression-gzip"] }
tower_governor = "0.4"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# OpenAPI Documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Environment
dotenv = "0.15"

# Async utilities
async-stream = "0.3"
tokio-stream = "0.1"

# Error handling
anyhow = "1.0"

# Cryptography for API keys
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[features]
default = []
bench = []

[[bench]]
name = "performance"
harness = false
